--- a/website_v1.css
+++ b/website_v1.css
@@ -28,7 +28,7 @@ main {
 }
 
 body {
-    background-color: orangered;
+    background-color: rgb(255, 255, 255);
 
 }
 
@@ -37,7 +37,7 @@ article {
     padding: 10px;
 
     color: black;
-    background-color: lightpink;
+    background-color: rgba(128, 128, 128, 0.1);
 
 
 }
@@ -53,6 +53,7 @@ h1 {
     padding-bottom: 20px;
     padding-top: 20px;
     color: #21213F;
+    font-family: 'Space Mono', monospace;
 
 
 }
@@ -60,6 +61,17 @@ h1 {
 h2 {
 
     padding-top: 8px;
+        font-family: 'Space Mono', monospace;
+
+
+}
+
+h3 {
+        font-family: 'Space Mono', monospace;
+
+}
+p {
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -88,6 +100,10 @@ button {
     border: 0;
     padding: 10px 20px;
     color: aliceblue;
+    border-radius: 2rem;
+        font-family: 'Roboto', sans-serif;
+
+
 }
 
 button:hover {
