--- a/website_v1.css
+++ b/website_v1.css
@@ -27,6 +27,245 @@ main {
 
 }
 
+article {
+
+    padding: 10px;
+
+    color: black;
+    background-color: lightpink;
+
+
+}
+
+article:hover {
+    color: #c5cae2;
+    background-color: aliceblue;
+}
+
+h1 {
+    text-align: center;
+    font-weight: 200;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    color: #21213F;
+
+
+}
+
+h2 {
+
+    padding-top: 8px;
+
+}
+
+nav {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.valgt {
+    background-color: #c5cae2;
+}
+
+
+
+article p {
+    padding-top: 4px;
+
+}
+
+button {
+    background-color: deeppink;
+    border: 0;
+    padding: 10px 20px;
+}
+
+button:hover {
+    background-color: white;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 50px;
+    background-color: ##232323;
+}
+
+img {
+    width: 200px;
+    object-fit: cover;
+}
+
+.header_billede {
+    object-fit: cover;
+    width: 100%;
+    height: 170px;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1000px;
+    margin: 0 auto;
+    /*    padding: 10px;*/
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    font-weight: 300;
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-bottom: 200px;
+}
+
+article {
+    padding: 10px;
+    border-radius: 100px;
+    color: black;
+    background-color: #F6BBA4;
+    cursor: pointer;
+}
+
+article:hover {
+    color: #c5cae2;
+    background-color: aliceblue;
+}
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    margin: auto;
+    text-align: left;
+    border-bottom: 1px solid #F3F3F3;
+}
+
+h3 {
+    font-family: 'Space Mono', monospace;
+    border-bottom: 1.5px solid #F3F3F3;
+    width: 140px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 200;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    color: #535353;
+}
+
+h4 {
+    font-family: 'Space Mono', monospace;
+    font-size: 1.4rem;
+    text-align: center;
+    padding-top: 8px;
+    color: #ffffff;
+}
+
+.se-mere {
+    font-family: 'Roboto', sans-serif;
+    margin: auto;
+    text-align: center;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
+    width: 80px;
+}
+
+#nav_menu {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    background-color: #232323;
+    color: #D4D4D4;
+}
+
+.nav_nav {
+    display: flex;
+    margin: 0 auto;
+}
+
+#nav_knapper {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.valgt {
+    background-color: #232323;
+    border-bottom: 6px solid #121212;
+    color: #ffffff;
+}
+
+#genre_tag_div {
+    display: flex;
+    flex-direction: row;
+}
+
+.genre_tag {
+    display: flex;
+    margin: auto;
+    background-color: red;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+
+}
+
+article p {
+    padding-top: 4px;
+}
+
+button {
+    background-color: #F3F3F3;
+    font-family: 'Roboto', sans-serif;
+    border: 0;
+    font-size: 0.8rem;
+    border-radius: 50px;
+    width: 140px;
+    height: 30px;
+    border-bottom: 6px solid #C7C7C7;
+    margin: auto;
+    text-align: center;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #e2e2e2;
+    border-bottom: 6px solid #b1b1b1;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 50px;
+    background-color: #232323;
+}
+
+/*
+* {
+    box-sizing: border-box;
+    grid-gap: 10px;
+    font-family: Acumin Pro SemiCondensed;
+    margin: 0;
+
+}
+
+
+img {
+    width:
+        200px;
+    object-fit: cover;
+
+
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    font-weight: 300;
+    padding-bottom: 200px;
+
+}
+
 body {
     background-color: rgb(255, 255, 255);
 
@@ -125,3 +364,4 @@ footer {
 
 
 }
+*/
