--- a/website_v1.css
+++ b/website_v1.css
@@ -15,17 +15,7 @@ img {
 
 }
 
-main {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 10px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    font-weight: 300;
-    padding-bottom: 200px;
 
-}
 
 
 nav a img {
@@ -42,6 +32,8 @@ article {
 
     color: black;
     background-color: lightpink;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
 
 }
@@ -67,6 +59,7 @@ h1 {
 h2 {
 
     padding-top: 8px;
+    text-align: center;
 
 }
 
@@ -106,6 +99,7 @@ footer {
 img {
     width: 200px;
     object-fit: cover;
+    border-radius: 20rem
 }
 
 .header_billede {
@@ -143,7 +137,6 @@ article:hover {
 h2 {
     font-family: 'Roboto', sans-serif;
     margin: auto;
-    text-align: left;
     border-bottom: 1px solid #F3F3F3;
 }
 
