--- a/detalje.css
+++ b/detalje.css
@@ -1,17 +1,264 @@
-body {
-    background-color: white;
+* {
+    box-sizing: border-box;
+    grid-gap: 10px;
+    font-family: Acumin Pro SemiCondensed;
+    margin: 0;
+
+}
+
+
+img {
+    width:
+        200px;
+    object-fit: cover;
+
+
+}
+
+main {
+
+    font-weight: 300;
+    padding-bottom: 200px;
+    padding-left: 5rem;
+    padding-right: 5rem;
+
+
+}
+
+colleft img {
+    width: 50rem;
+}
+
+
+nav a img {
+    width: 4rem;
+    filter: grayscale(20%);
+
+}
+
+
 }
 
 article {
-    background-color: rgba(128, 128, 128, 0.1);
+
+    padding: 10px;
+
+    color: black;
+    background-color: lightpink;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 10px;
+
+
 
 }
 
-img {
-    border-radius: 2rem;
+article:hover {
+    color: #c5cae2;
+    background-color: aliceblue;
 }
 
-.logo {
+h1 {
+    font-family: 'Space Mono', monospace;
+    text-align: center;
+    font-weight: 2000;
+    padding-bottom: 20px;
+    padding-top: 5rem;
+    background-image: url(billeder/billede_01.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 20rem;
+    color: white;
+}
+
+h2 {
+    font-family: 'Space Mono', monospace;
+
+    padding-top: 8px;
+    text-align: center;
+
+}
+
+p {
     text-align: center;
 }
 
+nav {
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.valgt {
+    background-color: #c5cae2;
+}
+
+
+
+article p {
+    padding-top: 4px;
+
+}
+
+button {
+    background-color: deeppink;
+    border: 0;
+    padding: 10px 20px;
+}
+
+button:hover {
+    background-color: white;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 50px;
+    background-color: #232323;
+}
+
+img {
+    width: 23rem;
+    object-fit: cover;
+    border-radius: 20rem
+}
+
+.header_billede {
+    object-fit: cover;
+    width: 100%;
+    height: 170px;
+}
+
+
+article {
+    padding-top: 5rem;
+    padding: 50px;
+    border-radius: 100px;
+    color: black;
+    cursor: pointer;
+    display: grid;
+    grid-template-columns: 1fr 1fr 0.3fr;
+}
+
+.genre {
+    background-image: url(Repeat%20Grid%202.png);
+    background-position: center;
+    background-size: cover;
+    height: 8rem;
+    width: 8rem;
+    text-align: center;
+    font-family: 'Space Mono', monospace;
+
+
+}
+
+
+
+
+h3 {
+    font-family: 'Space Mono', monospace;
+    border-bottom: 1.5px solid #F3F3F3;
+    width: 140px;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 1.1rem;
+    font-weight: 200;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    color: #535353;
+}
+
+h4 {
+    font-family: 'Space Mono', monospace;
+    font-size: 1.4rem;
+    text-align: center;
+    padding-top: 8px;
+    color: #ffffff;
+}
+
+.se-mere {
+    font-family: 'Roboto', sans-serif;
+    margin: auto;
+    text-align: center;
+    color: #ffffff;
+    border-bottom: 1px solid #ffffff;
+    width: 80px;
+}
+
+#nav_menu {
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    background-color: #232323;
+    color: #D4D4D4;
+}
+
+.nav_nav {
+    position: relative;
+    top: 0.9rem;
+    display: flex;
+    margin: 0 auto;
+    float: right;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+#nav_knapper {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.valgt {
+    background-color: #232323;
+    border-bottom: 6px solid #121212;
+    color: #ffffff;
+}
+
+#genre_tag_div {
+    display: flex;
+    flex-direction: row;
+}
+
+.genre_tag {
+    display: flex;
+    margin: auto;
+    background-color: red;
+    justify-content: flex-end;
+    margin-bottom: 40px;
+
+}
+
+article p {
+    padding-top: 4px;
+}
+
+button {
+    background-color: #F3F3F3;
+    font-family: 'Roboto', sans-serif;
+    border: 0;
+    font-size: 0.8rem;
+    border-radius: 50px;
+    width: 140px;
+    height: 30px;
+    border-bottom: 6px solid #C7C7C7;
+    top: 5rem;
+    text-align: center;
+    cursor: pointer;
+    float: left;
+}
+
+button:hover {
+    background-color: #e2e2e2;
+    border-bottom: 6px solid #b1b1b1;
+}
+
+footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 50px;
+    background-color: #232323;
+}
