--- a/detalje.css
+++ b/detalje.css
@@ -139,6 +139,7 @@ article {
     cursor: pointer;
     display: grid;
     grid-template-columns: 1fr 1fr 0.3fr;
+    grid-column-gap: 10rem;
 }
 
 .genre {
