--- a/index.css
+++ b/index.css
@@ -31,10 +31,30 @@ img {
 }
 
 #sticky {
-    position: fixed;
+    position: ;
     top: 0;
     width: 100%;
     background-color: white;
+}
+
+topright {
+    padding-top: 2rem;
+}
+.genre {
+
+    background-image: url(IMG/baggrundgenre.png);
+
+    background-position: center;
+
+    background-size: cover;
+
+    height: 8rem;
+
+    width: 8rem;
+
+    text-align: center;
+
+    font-family: 'Space Mono', monospace;
 }
 
 /* top nav */
@@ -76,7 +96,7 @@ button {
     border: 0;
     border-bottom: 6px solid #C7C7C7;
     border-radius: 50px;
-    width: 140px;
+    width: 80px;
     height: 30px;
     margin: 2px;
     cursor: pointer;
@@ -94,8 +114,6 @@ button:hover {
 }
 
 .genre_tag {
-    width: 100px;
-    background-color: red;
 }
 
 /* loop view */
