--- a/index.css
+++ b/index.css
@@ -89,8 +89,8 @@ button {
     border: 0;
     border-bottom: 3px solid #C7C7C7;
     border-radius: 50px;
-    width: 80px;
-    height: 30px;
+    width: 90px;
+    height: 40px;
     margin: 2px;
     cursor: pointer;
 }
@@ -204,29 +204,64 @@ colleft img {
     font-family: 'Space Mono', monospace;
     text-transform: uppercase;
     font-weight: bolder;
-    font-size: 1.8em;
+    font-size: 1.5em;
 }
 
 .genre {
-    padding-top: 5vh;
+    padding-top: 3vh;
+    font-family: 'Space Mono', monospace;
+
 }
 
 #spot {
     background-color: #1db954;
     color: black;
     width: 6vw;
-    height: 6vw;
-    padding: 20px;
-    border-radius: 50%;
+    height: 8rem;
+    width: 8rem;
+    border-radius: 20rem;
+    font-family: 'Space Mono', monospace;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-size: 1.5em;
+    align-content: center;
+}
+
+
 
 }
 
 #spot p {
     padding-top: 10px;
+    text-transform: uppercase;
+    font-weight: bolder;
+    font-family: 'Space Mono', monospace;
+    font-size: 1em;
 }
 
 #spot a {
     text-transform: uppercase;
+    font-weight: bolder;
+    font-family: 'Space Mono', monospace;
+    font-size: 1em;
+    text-decoration-color: black;
+    padding-top: 3vh;
+
+
+
+
+}
+
+a:link {
+    color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: white;
 }
 
 /* footer */
@@ -237,6 +272,18 @@ footer {
     display: grid;
     grid-template-columns: 0.5fr 1fr 1fr;
     grid-column-gap: 10rem;
+}
+
+footer a:link {
+    color: white;
+}
+
+footer a:visited {
+    color: white;
+}
+
+footer img {
+    width: 15rem;
 }
 
 /* Media Query */
@@ -275,19 +322,19 @@ footer {
     }
 
     .single {
-    position: relative;
-    padding-top: 0rem;
-    padding: 50px;
-    border-radius: 50rem;
-    color: black;
-    cursor: pointer;
-    display: grid;
-    grid-template-columns: 1fr 1fr 0.3fr;
-    grid-column-gap: 10rem;
-    background-color: rgb(255, 255, 255);
-    top: -8rem;
-    background-color: none;
+        position: relative;
+        padding-top: 0rem;
+        padding: 50px;
+        border-radius: 50rem;
+        color: black;
+        cursor: pointer;
+        display: grid;
+        grid-template-columns: 1fr 1fr 0.3fr;
+        grid-column-gap: 10rem;
+        background-color: rgb(255, 255, 255);
+        top: -8rem;
+        background-color: none;
 
-}
+    }
 
 }
