--- a/index.css
+++ b/index.css
@@ -31,6 +31,13 @@ nav {
     top: -50rem;
 }
 
+#top a {
+    color: white
+}
+
+#top a:hover {
+    color: deeppink;
+}
 
 #top {
     height: 8vh;
@@ -40,7 +47,7 @@ nav {
 }
 
 #top p {
-    margin: auto;
+    padding: 2vw;
     text-transform: uppercase;
 }
 
@@ -186,14 +193,13 @@ colleft img {
     background-color: rgb(255, 255, 255);
     top: -8rem;
     background-color: none;
-
 }
 
 .single img {
-    max-height: 400px;
-    max-width: 400px;
-    border: 20px solid #F3F3F3;
+    width: 300px;
+    height: 300px;
 }
+
 
 #rund {
     background-color: #f9ff65;
@@ -213,7 +219,7 @@ colleft img {
 
 #rund p {
     padding-top: 8vh;
-      padding: 1.5rem;
+    padding: 1.5rem;
 }
 
 .genre {
@@ -267,11 +273,11 @@ a:link {
 }
 
 a:visited {
-  color: black;
+    color: black;
 }
 
 a:hover {
-  color: white;
+    color: white;
 }
 
 /* footer */
@@ -293,6 +299,11 @@ footer a:visited {
 
 footer img {
     width: 15rem;
+}
+
+.up {
+    max-height: 100px;
+    max-width: 100px;
 }
 
 .col4 {
@@ -352,12 +363,18 @@ footer img {
 
     }
 
+    .single img {
+        max-height: 400px;
+        max-width: 400px;
+        border: 20px solid #F3F3F3;
+    }
+
     footer {
-    background-color: black;
-    color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 10rem;
-}
+        background-color: black;
+        color: white;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-column-gap: 10rem;
+    }
 
 }
