--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ h1:hover {
 
 h2 {
     font-family: 'Roboto', sans-serif;
-    padding-bottom: 80px;
+    padding-bottom: 90px;
     font-weight: 400;
     font-size: 5vw;
     color: #535353;
@@ -75,7 +75,7 @@ nav {
 /* header */
 
 header {
-    height: 60vh;
+    height: 55vh;
     background-image: url(IMG/header.jpg);
     background-size: cover;
     background-position: center;
@@ -105,7 +105,7 @@ span {
 #genre {
     display: block;
     position: relative;
-    top: -6rem;
+    top: -12rem;
 }
 
 button {
@@ -356,6 +356,10 @@ footer img {
         padding-bottom: 2vw;
     }
 
+    #genre {
+        top: -9rem;
+    }
+
     #top {
         display: inherit;
     }
@@ -374,7 +378,7 @@ footer img {
     }
 
     header {
-        height: 60vh;
+        height: 80vh;
         background-image: url(IMG/header.jpg);
         background-size: cover;
         background-position: center;
