--- a/index.css
+++ b/index.css
@@ -7,10 +7,12 @@
 }
 
 h1 {
+    font-family: 'Monoton', cursive;
+    font-size: 2em;
+    letter-spacing: 0.2em;
     text-align: center;
-    color: #FFFEFE;
-    font-family: 'Roboto', sans-serif;
-    width: 250px;
+    color: white;
+    width: 320px;
 }
 
 h1:hover {
@@ -18,38 +20,20 @@ h1:hover {
 }
 
 h2 {
-    font-family: 'Roboto', sans-serif;
-    padding-bottom: 90px;
-    font-weight: 400;
-    font-size: 5vw;
-    color: #535353;
-    text-align: left;
-    padding: 30px;
+    font-family: 'Space Mono', monospace;
+    font-size: 1.5em;
+    color: black;
 }
 
 h3 {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Space Mono', monospace;
 }
 
 p {
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
 }
 
 /* top nav */
-
-nav {
-    position: inherit;
-    top: -50rem;
-}
-
-#top a {
-    color: white
-}
-
-#top a:hover {
-    color: deeppink;
-}
 
 #top {
     height: 6vh;
@@ -58,33 +42,31 @@ nav {
     display: flex;
 }
 
-#top p {
-    padding-top: 3.5vw;
-    color: #E6E6E6;
-    /*    text-transform: uppercase;*/
-}
-
 #top a {
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
     text-decoration: none;
+    color: white;
+    padding: 3.5vw;
 }
 
-#top img {
-    display: none;
+#top a:hover {
+    color: deeppink;
 }
 
 /* header */
 
 header {
     height: 55vh;
-    background-image: url(IMG/header.jpg);
+    background-image: url(IMG/Header.jpg);
     background-size: cover;
     background-position: center;
     padding-top: 30px;
 }
 
 header a {
-    text-decoration: none;
     color: black;
+    text-decoration: none;
     cursor: pointer;
 }
 
@@ -96,29 +78,27 @@ span {
     color: transparent;
 }
 
-.vaelg_en_genre {
-    font-family: 'Space Mono', monospace;
-    color: #535353;
-    padding-bottom: 4vw;
-}
-
 #genre {
     display: block;
     position: relative;
-    top: -12rem;
+    top: -20vh;
+}
+
+#genre h3 {
+    padding-bottom: 4vw;
 }
 
 button {
+    width: 120px;
+    height: 35px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 100;
+    font-weight: bolder;
     text-transform: uppercase;
     background-color: #F3F3F3;
     border: 0;
     border-bottom: 3px solid #C7C7C7;
     border-radius: 50px;
-    width: 90px;
-    height: 25px;
-    margin: 2px;
+    margin: 4px;
     cursor: pointer;
 }
 
@@ -129,96 +109,69 @@ button:hover {
 
 .valgt {
     background-color: #232323;
-    border-bottom: 6px solid #121212;
+    border-bottom: 6px solid black;
     color: #ffffff;
 }
-
-.genre_tag {}
 
 /* loop view */
 
 #liste {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
-    grid-auto-rows: 1fr;
-    grid-gap: 20px;
-    margin-top: 600px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    margin-top: -6rem;
+    grid-gap: 50px;
+    margin-bottom: 60px;
 }
 
 #liste img {
-    max-width: 400px;
+    max-width: 300px;
     max-height: 300px;
-    border-radius: 15rem;
-    background-color: lightgrey;
+    border-radius: 50%;
+
 }
 
-
 article {
+    width: 350px;
     border-radius: 20% 20% 10% 10%;
     cursor: pointer;
-    position: relative;
-    top: -37rem;
 }
 
 article:hover {
     color: #c5cae2;
-    background-color: none;
+    background-color: aliceblue;
 }
 
 article p {
-    width: 200px;
+    width: 250px;
 }
 
 .navn {
     font-family: 'Space Mono', monospace;
-    font-size: 1.8em;
+    font-size: 2em;
     font-weight: bolder;
     text-transform: uppercase;
 }
 
-.se-mere {
-    font-family: 'Roboto', sans-serif;
-    margin: auto;
-    text-align: center;
-    color: #ffffff;
-    border-bottom: 1px solid #ffffff;
-    width: 80px;
-}
-
 /* single view */
-
-#main {
-    padding-top: 30px;
-}
-
-topright {
-    padding-top: 2rem;
-}
-
-colleft img {
-    width: 50rem;
-    border-radius: 5rem;
-
-}
 
 .single {
     position: relative;
-    padding-top: 1rem;
-    padding: 50px;
-    border-radius: 50rem;
-    color: black;
-    cursor: pointer;
+    top: -15vh;
     display: grid;
     grid-template-columns: 1fr;
-    grid-column-gap: 10rem;
-    background-color: rgb(255, 255, 255);
-    top: -8rem;
-    background-color: none;
+    color: black;
+    grid-column-gap: 10px;
+    background-color: white;
+}
+
+.beskrivelse-lang {
+    width: 300px;
 }
 
 .single img {
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
+    padding-bottom: 30px;
 }
 
 
@@ -235,7 +188,6 @@ colleft img {
     font-size: 1.5em;
     align-content: center;
 }
-
 
 
 #rund p {
@@ -263,10 +215,6 @@ colleft img {
     align-content: center;
 }
 
-
-
-}
-
 #spot p {
     padding-top: 10px;
     text-transform: uppercase;
@@ -282,23 +230,12 @@ colleft img {
     font-family: 'Space Mono', monospace;
     font-size: 1em;
     text-decoration-color: black;
+    color: black;
     padding-top: 3vh;
-
-
-
-
 }
 
-a:link {
+#spot a:visited {
     color: black;
-}
-
-a:visited {
-    color: black;
-}
-
-a:hover {
-    color: white;
 }
 
 /* footer */
@@ -307,10 +244,6 @@ footer {
     background-color: #000000;
     color: #E6E6E6;
     padding: 2rem;
-}
-
-footer p {
-    font-family: 'Roboto', sans-serif;
 }
 
 footer a:link {
@@ -326,39 +259,32 @@ footer img {
 }
 
 .up {
-    max-height: 50px;
-    max-width: 50px;
-}
-
-.col4 {
-    display: flex;
-    text-align: center;
-    align-content: center;
+    max-height: 80px;
+    max-width: 80px;
 }
 
 /* Media Query */
 
 @media only screen and (min-width: 800px) {
 
+    /* Hele siden */
+
     h1 {
         width: 100%;
+        font-size: 3em;
         padding-top: 13vh;
         letter-spacing: 1rem;
     }
 
     h2 {
         font-size: 2vw;
-        text-align: center;
-        padding-bottom: 7vw;
     }
 
-    .vaelg_en_genre {
-        padding-bottom: 2vw;
+    h3 {
+        font-size: 1.6em;
     }
 
-    #genre {
-        top: -9rem;
-    }
+    /* Top nav */
 
     #top {
         display: inherit;
@@ -370,50 +296,68 @@ footer img {
     }
 
     #top img {
-        display: unset;
         height: 100%;
         width: 100px;
         float: left;
-        padding-left: 10px;
+        padding-left: 15px;
     }
+
+    /* header */
 
     header {
         height: 80vh;
-        background-image: url(IMG/header.jpg);
-        background-size: cover;
-        background-position: center;
+        background-image: url(IMG/Header.jpg);
     }
 
+    /*genre nav */
+
+    #genre h3 {
+        padding-bottom: 1vw;
+    }
+
+    button {
+        width: 150px;
+        height: 40px;
+        margin: 8px;
+    }
+
+    /* loop view */
+
     article p {
-        width: 400px;
+        width: 300px;
     }
 
     article img {
-        width: 20rem;
+        height: 500px;
     }
+
+    /* single view */
 
     .single {
         position: relative;
-        padding-top: 0rem;
+        top: -20vh;
+        border-radius: 60%;
         padding: 50px;
-        border-radius: 50rem;
         color: black;
-        cursor: pointer;
         display: grid;
         grid-template-columns: 1fr 1fr 0.3fr;
         grid-column-gap: 10rem;
         background-color: rgb(255, 255, 255);
-        top: -8rem;
-        background-color: none;
 
     }
 
     .single img {
-        max-height: 400px;
-        max-width: 400px;
+        height: 400px;
+        width: 400px;
         border: 20px solid #F3F3F3;
+        padding-bottom: 0px;
     }
 
+    .beskrivelse-lang {
+        width: 100%;
+    }
+
+    /*footer*/
     footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
